--- a/test/withR.ipynb
+++ b/test/withR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,9 +19,11 @@
     "earth_radius = np.float64(6371000)\n",
     "earth_mass = np.float64(5.976 * 10**24)\n",
     "G = np.float64(6.67 * 10**(-11))\n",
+    "albedo_coef = 0.3\n",
+    "earth_radiation = 240\n",
     "\n",
-    "As = np.array([0.6] * 6) #\n",
-    "e = np.array([0.4] * 6) #\n",
+    "As = np.array([0.6] * 6) \n",
+    "e = np.array([0.4] * 6) \n",
     "qs = np.float64(1367)\n",
     "generationHeat = np.array([50] * 6)\n",
     "\n",
@@ -34,132 +36,65 @@
     "c = 800\n",
     "p = 2700\n",
     "\n",
-    "orbit_radius = np.float64(500)\n"
+    "height_above_Earth = np.float64(500)*1000\n",
+    "labels = [\"Зенит\", \"Надир\", \"Перпенд 1\", \"Перпенд 2\", \"Теневая\", \"Солнечная\"]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([311.07776865, 147.77137832,  50.        ,  50.        ,\n",
-       "        50.        , 330.07629642])"
+       "(0.38384819529001624, 3526.626721270226, 5668.153198351584)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Qav = np.zeros(6)\n",
-    "Qav += generationHeat\n",
-    "Qav\n",
+    "radius = height_above_Earth + earth_radius # в метры\n",
+    "velocity = np.sqrt(G * earth_mass / radius) # скорость \n",
+    "length = 2*np.pi*radius #длина орбиты\n",
+    "period = length/velocity #период полного оборота\n",
     "\n",
-    "orbit_radius *= 1000\n",
-    "angleSunSet = np.arccos(earth_radius/(earth_radius+orbit_radius))\n",
-    "sigma = np.float64(5.67*10**(-8))\n",
+    "angleSunSet = np.arccos(earth_radius/(earth_radius+height_above_Earth))\n",
+    "tDay = period * (np.pi/2+angleSunSet)/np.pi\n",
     "\n",
+    "angleSunSet, tDay, period\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1., 1., 1., 1., 1., 1.])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "areas = np.array([Ly*Lz, Ly*Lz,\n",
     "                Lx*Lz, Lx*Lz,\n",
     "                Lx*Ly, Lx*Ly])\n",
     "\n",
-    "Qav[0] += areas[0] * As[0] * qs/np.pi #зенит\n",
-    "Qav[5] += areas[5] * As[5] * qs/np.pi #солнечная до 6 часов\n",
-    "Qav[1] += np.sin(angleSunSet) * areas[1] * As[1] * qs/np.pi #надир после 6 часов\n",
-    "Qav[5] += (1 - np.cos(angleSunSet)) * areas[5] * As[5] * qs/np.pi #после до 6 часов\n",
-    "\n",
-    "Qav\n"
+    "areas\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([629.96898193, 629.96898193,  50.        ,  50.        ,\n",
-       "        50.        , 629.96898193])"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Qex = np.zeros(6)\n",
-    "Qex[0] += qs * As[0] * areas[0] * np.sqrt(2)/2\n",
-    "Qex[1] += qs * As[1] * areas[1] * np.sqrt(2)/2\n",
-    "Qex[5] += qs * As[5] * areas[5] * np.sqrt(2)/2\n",
-    "\n",
-    "Qex += generationHeat\n",
-    "Qex\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "288.2101037950334"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Qsum = np.sum(Qav)\n",
-    "\n",
-    "radiationCoef = np.sum(e[:]*areas[:]*areas[:]*sigma)\n",
-    "Tav = (Qsum/radiationCoef)**0.25\n",
-    "Tav\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1.e+24, 1.e+24, 2.e+00, 2.e+00, 2.e+00, 2.e+00],\n",
-       "       [1.e+24, 1.e+24, 2.e+00, 2.e+00, 2.e+00, 2.e+00],\n",
-       "       [2.e+00, 2.e+00, 1.e+24, 1.e+24, 2.e+00, 2.e+00],\n",
-       "       [2.e+00, 2.e+00, 1.e+24, 1.e+24, 2.e+00, 2.e+00],\n",
-       "       [2.e+00, 2.e+00, 2.e+00, 2.e+00, 1.e+24, 1.e+24],\n",
-       "       [2.e+00, 2.e+00, 2.e+00, 2.e+00, 1.e+24, 1.e+24]])"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "R = R_value * np.ones(shape=(6,6))\n",
-    "for i in range(6):\n",
-    "    R[i][i] = 10**24\n",
-    "for i in range(3):\n",
-    "    R[2*i+1][2*i] = 10**24\n",
-    "    R[2*i][2*i+1] = 10**24\n",
-    "R\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +103,7 @@
        "array([13.5, 13.5, 13.5, 13.5, 13.5, 13.5])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,160 +115,411 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Зенит:311.0777686479451\n",
+      "Надир:229.85845294508442\n",
+      "Перпенд 1:50.0\n",
+      "Перпенд 2:50.0\n",
+      "Теневая:50.0\n",
+      "Солнечная:408.8491469715451\n"
+     ]
+    }
+   ],
    "source": [
-    "radius = earth_radius*1000 + earth_radius # в метры\n",
-    "velocity = np.sqrt(G * earth_mass / radius) # скорость \n",
-    "length = 2*np.pi*radius #длина орбиты\n",
-    "period = length/velocity #период полного оборота\n",
+    "Qav = np.zeros(6)\n",
+    "Qav += generationHeat\n",
+    "Qav\n",
     "\n",
-    "tDay = period * (np.pi/2+angleSunSet)/(2*np.pi)\n"
+    "# От солнца\n",
+    "Qav[0]+=areas[0]*As[0]*qs/np.pi #зенит\n",
+    "Qav[1]+=areas[1]*As[1]*(1-np.cos(angleSunSet))*qs/np.pi #надир после 6 часов\n",
+    "Qav[5]+=areas[5]*As[5]*(1+np.sin(angleSunSet))*qs/np.pi #после до 6 часов\n",
+    "\n",
+    "#От солнечного альбедо\n",
+    "Qav[1]+=As[1]*areas[1]*albedo_coef*qs/np.pi\n",
+    "\n",
+    "#От земли\n",
+    "Qav[1]+=e[1]*areas[1]*earth_radiation*earth_radius**2/radius**2\n",
+    "for i in range(6):\n",
+    "    print(f\"{labels[i]}:{str(Qav[i])}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[6.0002166e+00, 5.0000000e-25, 2.5000000e-01, 2.5000000e-01,\n",
-       "        2.5000000e-01, 2.5000000e-01],\n",
-       "       [5.0000000e-25, 6.0002166e+00, 2.5000000e-01, 2.5000000e-01,\n",
-       "        2.5000000e-01, 2.5000000e-01],\n",
-       "       [2.5000000e-01, 2.5000000e-01, 6.0002166e+00, 5.0000000e-25,\n",
-       "        2.5000000e-01, 2.5000000e-01],\n",
-       "       [2.5000000e-01, 2.5000000e-01, 5.0000000e-25, 6.0002166e+00,\n",
-       "        2.5000000e-01, 2.5000000e-01],\n",
-       "       [2.5000000e-01, 2.5000000e-01, 2.5000000e-01, 2.5000000e-01,\n",
-       "        6.0002166e+00, 5.0000000e-25],\n",
-       "       [2.5000000e-01, 2.5000000e-01, 2.5000000e-01, 2.5000000e-01,\n",
-       "        5.0000000e-25, 6.0002166e+00]])"
+       "array([[0., 0., 2., 2., 2., 2.],\n",
+       "       [0., 0., 2., 2., 2., 2.],\n",
+       "       [2., 2., 0., 0., 2., 2.],\n",
+       "       [2., 2., 0., 0., 2., 2.],\n",
+       "       [2., 2., 2., 2., 0., 0.],\n",
+       "       [2., 2., 2., 2., 0., 0.]])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "m = 1/2/R\n",
+    "R = R_value * np.ones(shape=(6,6))\n",
     "for i in range(6):\n",
-    "    m[i][i] = np.sum(1/R/2) + c*mass[i]/tDay\n",
+    "    R[i][i] = 0\n",
+    "for i in range(3):\n",
+    "    R[2*i+1][2*i] = 0\n",
+    "    R[2*i][2*i+1] = 0\n",
+    "R\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total: 38 iteration\n",
+      "Зенит средняя темпераутра: 321.37K\n",
+      "Надир средняя темпераутра: 304.38K\n",
+      "Перпенд 1 средняя темпераутра: 271.23K\n",
+      "Перпенд 2 средняя темпераутра: 271.23K\n",
+      "Теневая средняя темпераутра: 262.89K\n",
+      "Солнечная средняя темпераутра: 341.77K\n"
+     ]
+    }
+   ],
+   "source": [
+    "Tav = 300*np.ones(6)\n",
+    "\n",
+    "eps = 0.001\n",
+    "eps_curr = 100\n",
+    "iter = 0\n",
+    "\n",
+    "alpha = 0.2\n",
+    "\n",
+    "while eps < eps_curr:\n",
+    "    eps_curr = -1\n",
+    "    iter += 1\n",
+    "    for i in range(6):\n",
+    "        index = R[i] > 0\n",
+    "\n",
+    "        newT = (1.0-alpha)*Tav[i] + alpha*(Qav[i] + np.sum(Tav[index]/R[i][index])) / (sigma*Tav[i]**3*areas[i]*e[i]+np.sum(1/R[i][index]))\n",
+    "        eps_curr = max(np.abs(newT - Tav[i]), eps_curr)\n",
+    "        Tav[i] = newT\n",
+    "\n",
+    "print(f\"Total: {iter} iteration\")\n",
+    "\n",
+    "for i in range(len(labels)):\n",
+    "    print(f\"{labels[i]} средняя темпераутра: {Tav[i]:5.2f}K\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([629.96898193, 289.18325577,  50.        ,  50.        ,\n",
+       "        50.        , 698.42503422])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Qex = np.zeros(6)\n",
+    "Qex[0] += qs * As[0] * areas[0] * np.sqrt(2)/2\n",
+    "Qex[5] += qs * As[1] * areas[1] * np.sqrt(2.5)/2\n",
+    "Qex[1] += e[1]*areas[1]*earth_radiation*earth_radius**2/radius**2\n",
+    "Qex[1] += 2*albedo_coef*qs*As[1]*areas[1]/np.pi\n",
+    "Qex += generationHeat\n",
+    "Qex\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([318.89121328,  59.32480282,   0.        ,   0.        ,\n",
+       "         0.        , 289.57588725])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Qex - Qav\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tDayCalculation = tDay/2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m = np.zeros(R.shape)\n",
+    "for i in range(6):\n",
+    "    for j in range(6):\n",
+    "        if i == j:\n",
+    "            index = R[i] > 0\n",
+    "            m[i][i] = np.abs(np.sum(1/R[i][index])) + c*mass[i]/tDayCalculation\n",
+    "        else:\n",
+    "            if R[i][j] != 0:\n",
+    "                m[i][j] = -1/R[i][j]\n",
+    "\n",
+    "d = Qex[:] - Qav[:] + Tav[:]*c*mass[:]/tDayCalculation\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1763.313360635113"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tDayCalculation\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 8.12483308,  0.        , -0.5       , -0.5       , -0.5       ,\n",
+       "        -0.5       ],\n",
+       "       [ 0.        ,  8.12483308, -0.5       , -0.5       , -0.5       ,\n",
+       "        -0.5       ],\n",
+       "       [-0.5       , -0.5       ,  8.12483308,  0.        , -0.5       ,\n",
+       "        -0.5       ],\n",
+       "       [-0.5       , -0.5       ,  0.        ,  8.12483308, -0.5       ,\n",
+       "        -0.5       ],\n",
+       "       [-0.5       , -0.5       , -0.5       , -0.5       ,  8.12483308,\n",
+       "         0.        ],\n",
+       "       [-0.5       , -0.5       , -0.5       , -0.5       ,  0.        ,\n",
+       "         8.12483308]])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "m\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([3.18953640e+02, 4.82260030e+02, 6.24267690e-02, 6.24267690e-02,\n",
-       "       6.24267690e-02, 2.99955112e+02])"
+       "array([2287.21625763, 1923.59257189, 1661.25066377, 1661.25066377,\n",
+       "       1610.16652006, 2382.8346135 ])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "d = Qex[:] - Qav[:] + Tav*c*mass[:]/tDay\n",
     "d\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([340.28530739, 367.50205657, 281.07029384, 281.07029384,\n",
-       "       283.34203664, 333.32234659])"
+       "array([356.23036007, 311.47575623, 285.17778408, 285.17778408,\n",
+       "       274.36838894, 369.46795417])"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from scipy import linalg\n",
-    "linalg.solve(m, d) + Tav\n"
+    "Tmax = linalg.solve(m, d)\n",
+    "\n",
+    "Tmax\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([50, 50, 50, 50, 50, 50])"
+       "array([ 50, 132,  50,  50,  50,  50])"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "Qex = generationHeat\n",
+    "Qex[1]+=e[1]*areas[1]*earth_radiation*earth_radius**2/radius**2\n",
+    "\n",
     "Qex\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tNight = period - tDay\n",
-    "\n",
-    "m = 1/2/R\n",
-    "for i in range(6):\n",
-    "    m[i][i] = np.sum(1/R/2) + c*mass[i]/tNight\n",
-    "\n",
-    "d = Qex[:] - Qav[:] + Tav*c*mass[:]/tNight\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([246.13215207, 273.3494401 , 292.36286566, 292.36286566,\n",
-       "       290.24114786, 243.56252607])"
+       "array([-261.07776865,  -97.85845295,    0.        ,    0.        ,\n",
+       "          0.        , -358.84914697])"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Qex - Qav\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tNight = (period - tDay)/2\n",
+    "\n",
+    "m = np.zeros(R.shape)\n",
+    "for i in range(6):\n",
+    "    for j in range(6):\n",
+    "        if i == j:\n",
+    "            index = R[i] > 0\n",
+    "            m[i][i] = np.abs(np.sum(1/R[i][index]/2)) + c*mass[i]/tNight\n",
+    "        else:\n",
+    "            if R[i][j] != 0:\n",
+    "                m[i][j] = -1/R[i][j]/2\n",
+    "\n",
+    "d = Qex[:] - Qav[:] + Tav[:]*c*mass[:]/tNight\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([293.96305358, 293.22878397, 272.83542359, 272.83542359,\n",
+       "       264.72476991, 304.11570522])"
+      ]
+     },
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from scipy import linalg\n",
-    "linalg.solve(m, d) + Tav\n"
+    "Tmin = linalg.solve(m, d)\n",
+    "\n",
+    "Tmin\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Зенит\n",
+      "avg:321.37K min:293.96K max:356.23K \n",
+      "Надир\n",
+      "avg:304.38K min:293.23K max:311.48K \n",
+      "Перпенд 1\n",
+      "avg:271.23K min:272.84K max:285.18K \n",
+      "Перпенд 2\n",
+      "avg:271.23K min:272.84K max:285.18K \n",
+      "Теневая\n",
+      "avg:262.89K min:264.72K max:274.37K \n",
+      "Солнечная\n",
+      "avg:341.77K min:304.12K max:369.47K \n"
+     ]
+    }
+   ],
+   "source": [
+    "labels_temp = [\"avg\", \"min\", \"max\"]\n",
+    "Temps = [Tav, Tmin, Tmax]\n",
+    "for i in range(len(labels)):\n",
+    "    print(f\"{labels[i].capitalize()}\")\n",
+    "    result = \"\"\n",
+    "    for j in range(len(Temps)):\n",
+    "        result +=f\"{labels_temp[j]}:{Temps[j][i]:5.2f}K \"\n",
+    "    print(result)\n"
+   ]
   }
  ],
  "metadata": {
