--- a/test/withR.ipynb
+++ b/test/withR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
        "(0.38384819529001624, 3526.626721270226, 5668.153198351584)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 265,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
        "array([1., 1., 1., 1., 1., 1.])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 266,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
        "array([13.5, 13.5, 13.5, 13.5, 13.5, 13.5])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 267,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [
     {
@@ -152,21 +152,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0., 0., 2., 2., 2., 2.],\n",
-       "       [0., 0., 2., 2., 2., 2.],\n",
-       "       [2., 2., 0., 0., 2., 2.],\n",
-       "       [2., 2., 0., 0., 2., 2.],\n",
-       "       [2., 2., 2., 2., 0., 0.],\n",
-       "       [2., 2., 2., 2., 0., 0.]])"
+       "array([[1.e+46, 1.e+46, 2.e+00, 2.e+00, 2.e+00, 2.e+00],\n",
+       "       [1.e+46, 1.e+46, 2.e+00, 2.e+00, 2.e+00, 2.e+00],\n",
+       "       [2.e+00, 2.e+00, 1.e+46, 1.e+46, 2.e+00, 2.e+00],\n",
+       "       [2.e+00, 2.e+00, 1.e+46, 1.e+46, 2.e+00, 2.e+00],\n",
+       "       [2.e+00, 2.e+00, 2.e+00, 2.e+00, 1.e+46, 1.e+46],\n",
+       "       [2.e+00, 2.e+00, 2.e+00, 2.e+00, 1.e+46, 1.e+46]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 269,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,16 +174,16 @@
    "source": [
     "R = R_value * np.ones(shape=(6,6))\n",
     "for i in range(6):\n",
-    "    R[i][i] = 0\n",
+    "    R[i][i] = 10**46\n",
     "for i in range(3):\n",
-    "    R[2*i+1][2*i] = 0\n",
-    "    R[2*i][2*i+1] = 0\n",
+    "    R[2*i+1][2*i] = 10**46\n",
+    "    R[2*i][2*i+1] = 10**46\n",
     "R\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [
     {
@@ -213,9 +213,8 @@
     "    eps_curr = -1\n",
     "    iter += 1\n",
     "    for i in range(6):\n",
-    "        index = R[i] > 0\n",
     "\n",
-    "        newT = (1.0-alpha)*Tav[i] + alpha*(Qav[i] + np.sum(Tav[index]/R[i][index])) / (sigma*Tav[i]**3*areas[i]*e[i]+np.sum(1/R[i][index]))\n",
+    "        newT = (1.0-alpha)*Tav[i] + alpha*(Qav[i] + np.sum(Tav/R[i])) / (sigma*Tav[i]**3*areas[i]*e[i]+np.sum(1/R[i]))\n",
     "        eps_curr = max(np.abs(newT - Tav[i]), eps_curr)\n",
     "        Tav[i] = newT\n",
     "\n",
@@ -227,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +236,7 @@
        "        50.        , 698.42503422])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 271,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +263,7 @@
        "         0.        , 289.57588725])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 272,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +311,7 @@
        "1763.313360635113"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 275,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,27 +322,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 8.12483308,  0.        , -0.5       , -0.5       , -0.5       ,\n",
-       "        -0.5       ],\n",
-       "       [ 0.        ,  8.12483308, -0.5       , -0.5       , -0.5       ,\n",
-       "        -0.5       ],\n",
-       "       [-0.5       , -0.5       ,  8.12483308,  0.        , -0.5       ,\n",
-       "        -0.5       ],\n",
-       "       [-0.5       , -0.5       ,  0.        ,  8.12483308, -0.5       ,\n",
-       "        -0.5       ],\n",
-       "       [-0.5       , -0.5       , -0.5       , -0.5       ,  8.12483308,\n",
-       "         0.        ],\n",
-       "       [-0.5       , -0.5       , -0.5       , -0.5       ,  0.        ,\n",
-       "         8.12483308]])"
+       "array([[ 8.12483308e+00, -1.00000000e-46, -5.00000000e-01,\n",
+       "        -5.00000000e-01, -5.00000000e-01, -5.00000000e-01],\n",
+       "       [-1.00000000e-46,  8.12483308e+00, -5.00000000e-01,\n",
+       "        -5.00000000e-01, -5.00000000e-01, -5.00000000e-01],\n",
+       "       [-5.00000000e-01, -5.00000000e-01,  8.12483308e+00,\n",
+       "        -1.00000000e-46, -5.00000000e-01, -5.00000000e-01],\n",
+       "       [-5.00000000e-01, -5.00000000e-01, -1.00000000e-46,\n",
+       "         8.12483308e+00, -5.00000000e-01, -5.00000000e-01],\n",
+       "       [-5.00000000e-01, -5.00000000e-01, -5.00000000e-01,\n",
+       "        -5.00000000e-01,  8.12483308e+00, -1.00000000e-46],\n",
+       "       [-5.00000000e-01, -5.00000000e-01, -5.00000000e-01,\n",
+       "        -5.00000000e-01, -1.00000000e-46,  8.12483308e+00]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 276,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +363,7 @@
        "       1610.16652006, 2382.8346135 ])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 277,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +384,7 @@
        "       274.36838894, 369.46795417])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 278,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,16 +398,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 50, 132,  50,  50,  50,  50])"
+       "array([ 50, 296,  50,  50,  50,  50])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 294,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +431,7 @@
        "          0.        , -358.84914697])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 280,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +473,7 @@
        "       264.72476991, 304.11570522])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 282,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [
     {
@@ -520,6 +519,146 @@
     "        result +=f\"{labels_temp[j]}:{Temps[j][i]:5.2f}K \"\n",
     "    print(result)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 284,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "heat_capacity=mass*c\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 285,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([10800., 10800., 10800., 10800., 10800., 10800.])"
+      ]
+     },
+     "execution_count": 285,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "heat_capacity\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 286,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(6):\n",
+    "    for j in range(6):\n",
+    "        if i == j:\n",
+    "            index = R[i] > 0\n",
+    "            m[i][i] = np.abs(np.sum(1/R[i][index]/2)) + heat_capacity[i]/tNight\n",
+    "        else:\n",
+    "            if R[i][j] != 0:\n",
+    "                m[i][j] = -1/R[i][j]/2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 290,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "118 µs ± 356 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "\n",
+    "for i in range(6):\n",
+    "    for j in range(6):\n",
+    "        if i == j:\n",
+    "            m[i][i] = np.abs(np.sum(1/R[i])) + c*mass[i]/tDayCalculation\n",
+    "        else:\n",
+    "            m[i][j] = -1/R[i][j]\n",
+    "\n",
+    "d = Qex[:] - Qav[:] + Tav[:]*c*mass[:]/tDayCalculation\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 288,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([8.12483308, 8.12483308, 8.12483308, 8.12483308, 8.12483308,\n",
+       "       8.12483308])"
+      ]
+     },
+     "execution_count": 288,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m[np.diag_indices_from(m)]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 289,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([8.12483308, 8.12483308, 8.12483308, 8.12483308, 8.12483308,\n",
+       "       8.12483308])"
+      ]
+     },
+     "execution_count": 289,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(1/R, axis=1) + c*mass[:]/tDayCalculation\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 292,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55.3 µs ± 1.76 µs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "\n",
+    "m = -1/R\n",
+    "m[np.diag_indices_from(m)] = np.sum(1/R, axis=1) + c*mass[:]/tDayCalculation\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
