--- a/test/withR.ipynb
+++ b/test/withR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,8 +22,8 @@
     "albedo_coef = 0.3\n",
     "earth_radiation = 240\n",
     "\n",
-    "As = np.array([0.6] * 6) \n",
-    "e = np.array([0.4] * 6) \n",
+    "As = np.array([0.1,0.1,0.1,0.5,0.5,0.9]) \n",
+    "e = np.array([0.1,0.1,0.1,0.9,0.9,0.9]) \n",
     "qs = np.float64(1367)\n",
     "generationHeat = np.array([50] * 6)\n",
     "\n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
        "(0.38384819529001624, 3526.626721270226, 5668.153198351584)"
       ]
      },
-     "execution_count": 265,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
        "array([1., 1., 1., 1., 1., 1.])"
       ]
      },
-     "execution_count": 266,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
        "array([13.5, 13.5, 13.5, 13.5, 13.5, 13.5])"
       ]
      },
-     "execution_count": 267,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,19 +115,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Зенит:311.0777686479451\n",
-      "Надир:229.85845294508442\n",
+      "Зенит:93.5129614413242\n",
+      "Надир:86.85445837237475\n",
       "Перпенд 1:50.0\n",
       "Перпенд 2:50.0\n",
       "Теневая:50.0\n",
-      "Солнечная:408.8491469715451\n"
+      "Солнечная:588.2737204573177\n"
      ]
     }
    ],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
        "       [2.e+00, 2.e+00, 2.e+00, 2.e+00, 1.e+46, 1.e+46]])"
       ]
      },
-     "execution_count": 269,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,20 +183,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total: 38 iteration\n",
-      "Зенит средняя темпераутра: 321.37K\n",
-      "Надир средняя темпераутра: 304.38K\n",
-      "Перпенд 1 средняя темпераутра: 271.23K\n",
-      "Перпенд 2 средняя темпераутра: 271.23K\n",
-      "Теневая средняя темпераутра: 262.89K\n",
-      "Солнечная средняя темпераутра: 341.77K\n"
+      "Total: 61 iteration\n",
+      "Зенит средняя темпераутра: 292.39K\n",
+      "Надир средняя темпераутра: 289.79K\n",
+      "Перпенд 1 средняя темпераутра: 287.53K\n",
+      "Перпенд 2 средняя темпераутра: 232.43K\n",
+      "Теневая средняя темпераутра: 229.61K\n",
+      "Солнечная средняя темпераутра: 315.82K\n"
      ]
     }
    ],
@@ -226,17 +226,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([629.96898193, 289.18325577,  50.        ,  50.        ,\n",
-       "        50.        , 698.42503422])"
+       "array([146.66149699,  96.74192551,  50.        ,  50.        ,\n",
+       "        50.        , 158.07083904])"
       ]
      },
-     "execution_count": 271,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,17 +253,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([318.89121328,  59.32480282,   0.        ,   0.        ,\n",
-       "         0.        , 289.57588725])"
+       "array([  53.14853555,    9.88746714,    0.        ,    0.        ,\n",
+       "          0.        , -430.20288142])"
       ]
      },
-     "execution_count": 272,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
        "1763.313360635113"
       ]
      },
-     "execution_count": 275,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
        "        -5.00000000e-01, -1.00000000e-46,  8.12483308e+00]])"
       ]
      },
-     "execution_count": 276,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,17 +353,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([2287.21625763, 1923.59257189, 1661.25066377, 1661.25066377,\n",
-       "       1610.16652006, 2382.8346135 ])"
+       "array([1843.9940605 , 1784.79897646, 1761.08297208, 1423.62077949,\n",
+       "       1406.35112499, 1504.16800004])"
       ]
      },
-     "execution_count": 277,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,17 +374,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([356.23036007, 311.47575623, 285.17778408, 285.17778408,\n",
-       "       274.36838894, 369.46795417])"
+       "array([289.47989928, 282.19420079, 282.27027623, 240.73561462,\n",
+       "       240.45923177, 252.49847911])"
       ]
      },
-     "execution_count": 278,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,16 +398,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 50, 296,  50,  50,  50,  50])"
+       "array([50, 70, 50, 50, 50, 50])"
       ]
      },
-     "execution_count": 294,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,17 +421,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-261.07776865,  -97.85845295,    0.        ,    0.        ,\n",
-       "          0.        , -358.84914697])"
+       "array([ -43.51296144,  -16.85445837,    0.        ,    0.        ,\n",
+       "          0.        , -538.27372046])"
       ]
      },
-     "execution_count": 280,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,17 +463,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([293.96305358, 293.22878397, 272.83542359, 272.83542359,\n",
-       "       264.72476991, 304.11570522])"
+       "array([285.05027339, 285.08803697, 285.65804885, 235.53055654,\n",
+       "       233.51286336, 263.39304646])"
       ]
      },
-     "execution_count": 282,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -495,17 +495,17 @@
      "output_type": "stream",
      "text": [
       "Зенит\n",
-      "avg:321.37K min:293.96K max:356.23K \n",
+      "avg:292.39K min:285.05K max:289.48K \n",
       "Надир\n",
-      "avg:304.38K min:293.23K max:311.48K \n",
+      "avg:289.79K min:285.09K max:282.19K \n",
       "Перпенд 1\n",
-      "avg:271.23K min:272.84K max:285.18K \n",
+      "avg:287.53K min:285.66K max:282.27K \n",
       "Перпенд 2\n",
-      "avg:271.23K min:272.84K max:285.18K \n",
+      "avg:232.43K min:235.53K max:240.74K \n",
       "Теневая\n",
-      "avg:262.89K min:264.72K max:274.37K \n",
+      "avg:229.61K min:233.51K max:240.46K \n",
       "Солнечная\n",
-      "avg:341.77K min:304.12K max:369.47K \n"
+      "avg:315.82K min:263.39K max:252.50K \n"
      ]
     }
    ],
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +540,7 @@
        "array([10800., 10800., 10800., 10800., 10800., 10800.])"
       ]
      },
-     "execution_count": 285,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,14 +567,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "118 µs ± 356 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+      "80.3 µs ± 10.2 µs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
      ]
     }
    ],
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +603,7 @@
        "       8.12483308])"
       ]
      },
-     "execution_count": 288,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +624,7 @@
        "       8.12483308])"
       ]
      },
-     "execution_count": 289,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -635,14 +635,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "55.3 µs ± 1.76 µs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+      "31.1 µs ± 1.27 µs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
      ]
     }
    ],
@@ -651,6 +651,219 @@
     "\n",
     "m = -1/R\n",
     "m[np.diag_indices_from(m)] = np.sum(1/R, axis=1) + c*mass[:]/tDayCalculation\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = pd.DataFrame([1, 2, 3, 4, 5, 6])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a.columns = ['a']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>a</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   a\n",
+       "0  1\n",
+       "1  2\n",
+       "2  3\n",
+       "3  4\n",
+       "4  5\n",
+       "5  6"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a['b'] = a['a'] + 2\n",
+    "a['c'] = a['a'] + 2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>a</th>\n",
+       "      <th>b</th>\n",
+       "      <th>c</th>\n",
+       "      <th>min</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   a  b  c  min\n",
+       "0  1  3  3    3\n",
+       "1  2  4  4    4\n",
+       "2  3  5  5    5\n",
+       "3  4  6  6    6\n",
+       "4  5  7  7    7\n",
+       "5  6  8  8    8"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a['min'] = a[['a'] + ['b']].max(axis=1)\n",
+    "a\n"
    ]
   },
   {
